# nsd

./: .gitignore  .travis.yml  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: install.sh
.github/workflows/: notebook_20au.yml  notebook_20au.yml_disabled  notebook_20sp.yml_disabled  notebook_21sp.yml  notebook_current.yml  primary.yml
archive/19au_nctu/: overflow.ipynb
archive/19au_nctu/arraydesign/modmesh/: .gitignore  CMakeLists.txt  COPYING
archive/19au_nctu/cache/: cache.ipynb
archive/19au_nctu/cpp/: cstdint.cpp  float.cpp
archive/19au_nctu/matrix/: 03_pod_matrix_rowmajor.cpp  04_pod_matrix_colmajor.cpp  Makefile  pod_bad_matrix.cpp
archive/19au_nctu/numpy/: numpy.ipynb
binder/: apt.txt  environment.yml  postBuild  start
contrib/: envs  install.sh  setup-aws.sh
doc/: syllabus.tex
note/: .gitignore  Makefile  syllabus.tex
notebook/: README.md  index.ipynb  launch.sh  numpy.ipynb  overflow.ipynb  xtensor.ipynb
notebook/01_introduction/: introduction.ipynb
notebook/01_numpy/: numpy_bare.ipynb
notebook/02_cpp/: cpp_bare.ipynb  fpexc.cpp
notebook/02_engineering/make3/: Makefile
notebook/03_engineering/: bashfunction.sh  dosomething.sh  engineering_bare.ipynb
notebook/03_engineering/bind1/: CMakeLists.txt
notebook/03_numpy/: numpy_bare.ipynb  step2.py
notebook/04_cpp/: list.cpp
notebook/04_mem/: mem_bare.ipynb
notebook/05_matrix/: 05_matrix_class.cpp  matrix_bare.ipynb
notebook/06_cache/: 02_locality.cpp
notebook/07_simd/: StopWatch.hpp  simd.ipynb  simd_bare.ipynb
notebook/07_simd/01_mul/: .gitignore
notebook/08_09_moderncpp/: moderncpp1_bare.ipynb  moderncpp2_bare.ipynb
notebook/08_09_moderncpp/01_pointer/: .gitignore
notebook/08_09_moderncpp/02_shared/: 01_fully.cpp
notebook/08_09_moderncpp/03_elision/: .gitignore
notebook/08_mem/: alloc.cpp  cppmem.cpp
notebook/09_smart/01_pointer/: 05_shared.cpp
notebook/09_smart/02_shared/: 04_cyclic.cpp
notebook/10_moderncpp/: moderncpp.ipynb  moderncpp_bare.ipynb
notebook/10_moderncpp/05_lambda/: 01_lambda.cpp
notebook/10_xtensor/: xtensor.ipynb  xtensor_bare.ipynb
notebook/11_cpppy/spacetime/: .clang-tidy
notebook/11_pybind/: pybind_bare.ipynb
notebook/11_pybind/spacetime/: Makefile
notebook/12_arraycode/: arraycode.ipynb
notebook/12_cpython/: cpython_bare.ipynb
notebook/19au_nctu/: README.md
notebook/19au_nctu/cpp/: Makefile  distance.cpp
notebook/19au_nctu/matrix/: 08_gesv.cpp  matrix.ipynb
notebook/19au_nctu/mem/: cmem.c
notebook/19au_nctu/moderncpp/: moderncpp2.ipynb
notebook/19au_nctu/numpy/: step1.py
notebook/20au_nctu/: index.ipynb
notebook/20au_nctu/01_introduction/: introduction.ipynb  introduction_bare.ipynb
notebook/20au_nctu/02_engineering/: engineering.ipynb  engineering_bare.ipynb
notebook/20au_nctu/03_numpy/: numpy.ipynb  numpy_bare.ipynb
notebook/20au_nctu/04_cpp/: accessor.cpp  cpp.ipynb  cpp_bare.ipynb  helloworld.cpp
notebook/20au_nctu/05_matrix/: .gitignore  matrix.ipynb  matrix_bare.ipynb
notebook/20au_nctu/06_cache/: cache.ipynb
notebook/20au_nctu/07_simd/: simd.key
notebook/20au_nctu/08_mem/: mem.ipynb
notebook/20au_nctu/10_moderncpp/: moderncpp.ipynb  moderncpp_bare.ipynb
notebook/20au_nctu/11_cpppy/: cpppy.ipynb  cpppy_bare.ipynb
notebook/20au_nctu/12_arraycode/: arraycode.ipynb  polynomial.ipynb
notebook/20au_nctu/13_arraydesign/: arraydesign.ipynb  arraydesign_bare.ipynb
notebook/20au_nctu/14_advpy/: advpy.ipynb
notebook/20sp_nctu/: index.ipynb  overflown.ipynb  term_project.ipynb
notebook/20sp_nctu/01_introduction/: introduction.ipynb  introduction_bare.ipynb
notebook/20sp_nctu/02_engineering/: .gitignore  engineering.ipynb  engineering_bare.ipynb
notebook/20sp_nctu/03_numpy/: numpy.ipynb  numpy_bare.ipynb
notebook/20sp_nctu/04_cpp/: cpp.ipynb  cpp_bare.ipynb  helloworld.cpp  signness.cpp
notebook/20sp_nctu/05_matrix/: .gitignore  06_matrix_vector.cpp  10_syev.cpp  11_gesvd.cpp  Makefile  matrix.ipynb  matrix_bare.ipynb
notebook/20sp_nctu/06_cache/: 01_skip_access.cpp  cache.ipynb  cache_bare.ipynb
notebook/20sp_nctu/07_simd/: Makefile  simd.ipynb  simd_bare.ipynb
notebook/20sp_nctu/08_mem/: Makefile  cmem.c
notebook/20sp_nctu/09_smart/: smart.ipynb  smart_bare.ipynb
notebook/20sp_nctu/10_moderncpp/: moderncpp.ipynb  moderncpp_bare.ipynb
notebook/20sp_nctu/11_cpppy/: cpppy.ipynb  cpppy_bare.ipynb
notebook/20sp_nctu/11_cpppy/spacetime/: .gitignore  CMakeLists.txt
notebook/20sp_nctu/11_cpppy/spacetime/cmake/: Findxsimd.cmake
notebook/20sp_nctu/11_cpppy/spacetime/include/spacetime/: math.hpp
notebook/20sp_nctu/11_cpppy/spacetime/tests/: test_celm_selm.py
notebook/21sp_nctu/: index.ipynb
notebook/arraydesign/: arraydesign.ipynb
notebook/cache/: .gitignore  01_skip_access.cpp  03_matrix_matrix.cpp  Makefile  StopWatch.hpp  cache.ipynb  locality.ipynb  matrix_matrix.cpp
notebook/cpp/: .gitignore  accessor.cpp  array.cpp  arrays.cpp  class.cpp  constructor.cpp  cpp.ipynb  crtp.cpp  cstdint.cpp  distance.cpp  float.cpp  fpexc.cpp  list.cpp  map.cpp  nlimits.cpp  polymorphic.cpp  reference.cpp  signness.cpp  types.cpp  unordered_map.cpp  vector.cpp
notebook/cpython/: cpython.ipynb
notebook/current/: README.md  index.ipynb  launch.sh  term_project.ipynb
notebook/engineering/: .gitignore  engineering.ipynb
notebook/matrix/: .gitignore  01_pod_vector.cpp  02_pod_matrix_auto.cpp  07_matrix_matrix.cpp  Makefile  gesv.cpp  matrix.ipynb  matrix_matrix.cpp  pod_bad_matrix.cpp
notebook/mem/: .gitignore  alloc.cpp  cmem.c  cppmem.cpp  icount.cpp  mem.ipynb  mismatch.cpp
notebook/moderncpp/: moderncpp.ipynb  moderncpp1.ipynb  moderncpp2.ipynb
notebook/numpy/: cce.tex  numpy.ipynb  pstake.py  step0.py
notebook/pybind/: pybind.ipynb
notebook/simd/: simd.ipynb
notebook/xtensor/: laplace.ipynb  xtensor.ipynb
proposal/: README.rst
proposal/000_template/: README.rst
proposal/001_unstmesh_part/: README.rst  unstmesh.ipynb
proposal/002_space_search/: README.rst
sample/numpy/: step0.py
(+167 files in other folders)
